Fixed issue of content being under the navbar

--- a/web/src/layout.css
+++ b/web/src/layout.css
@@ -1,15 +1,10 @@
 .layout {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-  min-width: 100vw;
 }
 
 .title {
   display: block;
-  background-color: transparent;
   position: fixed;
   top: 8%;
   left: 5%;
@@ -24,34 +19,42 @@
   width: 60%;
 }
 
+.content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  width: 100%;
+}
+
 .navbar {
   background-color: black;
   padding-top: 35px;
   color: white;
-  position: fixed;
-  top: 0;
-  right: 0;
-  height: 100%;
   width: 50px;
+  min-height: 100%;
   z-index: 10;
 }
 .rotation-wrapper-outer {
   display: table;
 }
 .rotation-wrapper-inner {
-  padding: 50% 0;
+  width: 50px;
+  padding: 100% 0px;
 }
 .link {
   display: block;
   transform-origin: top left;
   transform: rotate(90deg) translate(0, -100%);
-  margin-left: 15px;
+  margin-left: 30%;
   white-space: nowrap;
 }
 
 #git {
   text-align: center;
   position: fixed;
+  width: 50px;
   bottom: 0;
   margin-bottom: 20px;
 }
