--- a/web/src/components/MotionsSquare.css
+++ b/web/src/components/MotionsSquare.css
@@ -1,13 +1,21 @@
 .wrapper {
   display: flex;
+  padding: 1px;
 }
 
 .info {
   text-align: end;
   padding: 12px;
   font-size: 10pt;
-  width: 70px;
+  width: 90px;
+  text-transform: uppercase;
 }
+
+.reverse {
+  flex-direction: row-reverse;
+  text-align: start;
+}
+
 .squareContainer {
   display: flex;
   justify-content: center;
@@ -16,8 +24,7 @@
   width: 144px;
   height: 122px;
   background-color: #eaeaea;
-  color: #d9d9d9;
-  font-size: 15pt;
+
   margin: 0;
   padding: 0px;
 }
@@ -25,6 +32,9 @@
 .type {
   transform: rotate(-45deg);
   text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #d9d9d9;
+  font-size: 15pt;
 }
 .motionContainer {
   position: absolute;
@@ -41,4 +51,7 @@
   width: 12px;
   height: 16px;
   margin: 3px;
+}
+.motion:hover {
+  background-color: darkgray;
 }
