--- a/web/src/components/RiksdagChart/RiksdagsChart.css
+++ b/web/src/components/RiksdagChart/RiksdagsChart.css
@@ -2,6 +2,12 @@
   position: relative;
 }
 
+.pie-container .representative.highlight {
+    filter: drop-shadow(0px 0px 4px rgba(255, 255, 255, 0.7));
+    stroke-width: 2;
+    stroke: rgba(255, 255, 255, 0.7);
+}
+
 .pie-chart {
   position: absolute;
   bottom: 0;
