Added flex-wrap to not overflow

--- a/web/src/components/layout.css
+++ b/web/src/components/layout.css
@@ -22,6 +22,7 @@
 .content {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
