Made the navbar fixed and content the correct size

--- a/web/src/components/layout.css
+++ b/web/src/components/layout.css
@@ -1,6 +1,5 @@
 .layout {
   display: flex;
-  flex-direction: row;
 }
 
 .title {
@@ -26,10 +25,12 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  width: 100%;
+  width: calc(100% - 50px);
 }
 
 .navbar {
+  position: fixed;
+  right: 0;
   background-color: black;
   padding-top: 35px;
   color: white;
