--- a/web/src/components/Layout/Layout.css
+++ b/web/src/components/Layout/Layout.css
@@ -26,6 +26,7 @@
   justify-content: center;
   min-height: 100vh;
   width: calc(100% - 50px);
+  margin: 20px 0;
 }
 
 .navbar {
@@ -65,9 +66,10 @@ img {
   width: 55%;
 }
 
-.motions-container {
+.mid-section {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 100vw;
+  margin: 20px 0;
 }
