--- a/web/src/components/GovernmentChart/GovernmentWrapper.css
+++ b/web/src/components/GovernmentChart/GovernmentWrapper.css
@@ -1,5 +1,12 @@
 .logo{
     width:80px;
-    margin:auto;
-    
+    margin:0 124px 0 auto;
+}
+
+.government{
+    background-image: url("../../images/government-bg.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 80% auto;
+    margin:auto
 }
