--- a/web/src/components/RiksdagChart/RiksdagsChart.css
+++ b/web/src/components/RiksdagChart/RiksdagsChart.css
@@ -2,10 +2,14 @@
   position: relative;
 }
 
-.pie-container .representative.highlight {
-    filter: drop-shadow(0px 0px 4px rgba(255, 255, 255, 0.7));
+.pie-container .representative.hover {
     stroke-width: 2;
     stroke: rgba(255, 255, 255, 0.7);
+}
+
+.pie-container .representative.highlight {
+    stroke-width: 2;
+    stroke: rgba(0, 0, 0, 0.7);
 }
 
 .pie-chart {
