Show representative name when hovering, and show representatives when hovering documents

--- a/web/src/components/RiksdagChart/RiksdagsChart.css
+++ b/web/src/components/RiksdagChart/RiksdagsChart.css
@@ -12,6 +12,10 @@
     stroke: rgba(0, 0, 0, 0.7);
 }
 
+.pie-container .bold {
+    font-weight: bold;
+}
+
 .pie-chart {
   position: absolute;
   bottom: 0;
