Fix representative name presentation

--- a/web/src/components/RiksdagChart/RiksdagsChart.css
+++ b/web/src/components/RiksdagChart/RiksdagsChart.css
@@ -16,6 +16,10 @@
     font-weight: bold;
 }
 
+.pie-container .name-container div {
+    text-align: center;
+}
+
 .pie-chart {
   position: absolute;
   bottom: 0;
