--- a/web/src/components/RiksdagChart/RiksdagsChart.css
+++ b/web/src/components/RiksdagChart/RiksdagsChart.css
@@ -20,6 +20,15 @@
     text-align: center;
 }
 
+.pie-container .name-container .repr-image {
+    width: 50px;
+    height: 50px;
+    margin: auto;
+}
+.pie-container .name-container .repr-image img {
+    border-radius: 50%;
+}
+
 .pie-chart {
   position: absolute;
   bottom: 0;
