--- a/web/src/components/RiksdagChart/RiksdagsChart.css
+++ b/web/src/components/RiksdagChart/RiksdagsChart.css
@@ -2,7 +2,7 @@
   position: relative;
 }
 
-.pie-container .representative.hover {
+.pie-container .representative:hover {
     stroke-width: 2;
     stroke: rgba(255, 255, 255, 0.7);
 }
