--- a/web/src/components/MotionChart/MotionsChart.css
+++ b/web/src/components/MotionChart/MotionsChart.css
@@ -9,8 +9,6 @@
   width: 100px;
   padding: 12px;
   text-align: end;
-}
-#description {
   text-transform: uppercase;
   font-size: 10pt;
 }
@@ -27,12 +25,13 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  width: 144px;
-  height: 165px;
+  width: 200px;
+  height: 250px;
   background-color: #eaeaea;
   border: solid #eaeaea 1px;
   margin: 0;
   padding: 0px;
+  border-radius: 5px;
 }
 
 .motionType {
@@ -57,14 +56,18 @@
   width: 100%;
   margin: 3px;
   overflow: clip;
-  font-size: 7pt;
+  font-size: 8pt;
   padding: 3px;
+  border: solid white 1px;
+  border-radius: 5px;
 }
 .motion:hover {
-  border: solid grey 1px;
-  padding: 2px;
+  border-color: red;
 }
 
+.motionLink {
+  text-align: center;
+}
 a {
   text-decoration: none;
 }
