--- a/web/src/components/Layout/Layout.css
+++ b/web/src/components/Layout/Layout.css
@@ -66,14 +66,14 @@ img {
   width: 55%;
 }
 
-/* .top-section{
+.top-section{
   display:flex;
   flex-direction:row;
   justify-content: center;
   width: calc(100vw - 50px);
   margin: auto;
 
-} */
+}
 
 .mid-section {
   display: flex;
