--- a/web/src/components/MotionChart/MotionsChart.css
+++ b/web/src/components/MotionChart/MotionsChart.css
@@ -28,7 +28,7 @@
   width: 200px;
   height: 250px;
   background-color: #eaeaea;
-  border: solid #eaeaea 1px;
+  border: solid #eaeaea 4px;
   margin: 0;
   padding: 0px;
   border-radius: 5px;
@@ -45,6 +45,7 @@
   position: absolute;
   display: flex;
   overflow-y: scroll;
+  overflow-x: hidden;
   width: 100%;
   height: 100%;
   flex-wrap: wrap;
@@ -52,6 +53,7 @@
 }
 
 .motion {
+  display: flex;
   background-color: white;
   width: 100%;
   margin: 3px;
@@ -62,12 +64,19 @@
   border-radius: 5px;
 }
 .motion:hover {
-  border-color: red;
+  border-color: green;
 }
 
-.motionLink {
-  text-align: center;
+.motionTitle {
+  width: 95%;
 }
-a {
-  text-decoration: none;
+.motionLink {
+  width: 5%;
+  height: 100%;
+  align-items: center;
+  justify-self: flex-end;
+  padding-left: 10px;
+}
+.motionLink img {
+  width: 10px;
 }
