--- a/web/src/components/Layout/Layout.css
+++ b/web/src/components/Layout/Layout.css
@@ -97,17 +97,17 @@ img {
 
 .arrow-position-4{
   position: absolute;
-  left:350px;
+  left:25%;
 }
 
 .arrow-position-1{
   position: absolute;
-  left:220px;
+  left:14%;
 }
 
 .arrow-position-2{
   position: absolute;
-  right:250px;
+  right:20%;
 }
 
 
