--- a/web/src/components/MotionChart/MotionsChart.css
+++ b/web/src/components/MotionChart/MotionsChart.css
@@ -80,3 +80,51 @@
 .motionLink img {
   width: 10px;
 }
+
+.betankande {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    width: 100%;
+    margin: 3px;
+    overflow: auto;
+    font-size: 8pt;
+    padding: 3px;
+    border: solid white 1px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.betankande .betankandeHeader {
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    width: 100%;
+}
+
+.betankande .betankandePoints {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.betankande .betankandePoint {
+    margin: 5px;
+    border-bottom: #D4D4D4 solid 1px;
+}
+.betankande .betankandePoint:first-child {
+    border-top: #D4D4D4 solid 1px;
+}
+.betankande .betankandePoint:hover {
+    border-bottom: #505050 solid 1px;
+}
+
+.betankande .betankandePoint .pointTitle span {
+    display: inline;
+    margin-right: 3px;
+}
+
+.betankande .betankandePoint .pointDecision span {
+    display: inline;
+    margin-right: 3px;
+}
