--- a/web/src/index.css
+++ b/web/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+h2 {
+  margin: 8px 0;
+  font-size: 24px;
+}
+
+h3 {
+  margin: 0px 0;
+  font-size: 16px;
+}
