Show votes on the riksdags chart

--- a/web/src/components/RiksdagChart/RiksdagsChart.css
+++ b/web/src/components/RiksdagChart/RiksdagsChart.css
@@ -29,6 +29,29 @@
     stroke-width: 2;
     stroke: rgba(0, 0, 0, 0.7);
 }
+.pie-container .representative.vote {
+    fill: rgba(255, 255, 255, 0.4);
+}
+.pie-container .representative.vote-yes {
+    fill: rgba(255, 255, 255, 1.0);
+    stroke: rgba(0, 0, 0, 1);
+}
+.pie-container .representative.vote-no {
+    fill: rgba(0, 0, 0, 1.0);
+}
+.pie-container .representative.vote-abstained {
+    fill: rgba(0, 0, 0, 1.0);
+}
+.pie-container .representative.vote-abstained {
+    content:'-'
+}
+.pie-container .representative.vote-absent {
+    fill: rgba(255, 255, 255, 0.4);
+}
+.pie-container .representative.vote-irrelevant {
+    fill: rgba(255, 255, 255, 0.0);
+    stroke: rgba(255, 255, 255, 0.1);
+}
 
 .pie-container .bold {
     font-weight: bold;
