added info-texts, styling

--- a/web/src/components/AboutUs/AboutUs.css
+++ b/web/src/components/AboutUs/AboutUs.css
@@ -1,46 +1,56 @@
 .middle-section {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin: auto 100px auto 100px;
-  text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto 80px auto 80px;
+    text-align: center;
+}
+
+.infotext {
+    margin: -40px 300px 60px 300px;
+    text-align: left;
+}
+.profiles {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 figure {
-  position: relative;
-  top: 0px;
-  background-size: cover;
-  margin-bottom: 20px;
-  float: left;
+    position: relative;
+    top: 0px;
+    background-size: cover;
+    margin-bottom: 20px;
+    float: left;
 }
 
 figure img {
-  width: 180px;
-  height: 180px;
-  /* border: 10px solid #fff; */
-  background-size: cover;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  border-radius: 50%;
+    width: 180px;
+    height: 180px;
+    /* border: 10px solid #fff; */
+    background-size: cover;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    border-radius: 50%;
 }
 
 span {
-  margin: auto;
-  display: block;
+    margin: auto;
+    display: block;
 }
 
 .name {
-  margin: 0px -20px 0px -20px;
-  font-weight: bold;
-  font-size: 14pt;
+    margin: 0px -20px 0px -20px;
+    font-weight: bold;
+    font-size: 14pt;
 }
 
 .titles {
-  font-weight: bold;
-  font-size: 11pt;
+    font-weight: bold;
+    font-size: 11pt;
 }
 
 p {
-  font-size: 10pt;
+    font-size: 10pt;
 }
