--- a/web/src/components/CommitteesChart/Committees.css
+++ b/web/src/components/CommitteesChart/Committees.css
@@ -7,7 +7,24 @@
 }
 
 .committee-info {
-  width: 35%;
+  width: 25%;
   text-align: right;
   padding: 24px;
+  background-color: rgba(255, 255, 255, 0.9);
+}
+
+.committee-info p {
+  font-size: 10pt;
+  margin-top: 6px;
+}
+
+.committee-info h2 {
+  margin: 4px 0;
+  font-size: 18px;
+}
+
+.committee-info h3 {
+  margin: 0px 0;
+  font-size: 14px;
+  margin-bottom: 2px;
 }
