--- a/web/src/components/RiksdagChart/RiksdagsChart.css
+++ b/web/src/components/RiksdagChart/RiksdagsChart.css
@@ -61,6 +61,15 @@
     text-align: center;
 }
 
+.pie-container .name-container .district {
+    font-size: small;
+}
+
+.pie-container .name-container .vote {
+    font-size: small;
+    font-weight: bold;
+}
+
 .pie-container .name-container .repr-image {
     width: 50px;
     height: 50px;
