--- a/web/src/components/Layout/Layout.css
+++ b/web/src/components/Layout/Layout.css
@@ -128,6 +128,7 @@ img {
 }
 
 .top-section > div.votes-and-arrow {
+    width: 150px;
     justify-self: stretch;
     align-self: normal;
     display: flex;
