--- a/web/src/index.css
+++ b/web/src/index.css
@@ -12,4 +12,25 @@ code {
     monospace;
 }
 
+.chart-info {
+  width: 30%;
+  text-align: right;
+  padding: 12px 24px;
+  background-color: rgba(255, 255, 255, 0.9);
+}
 
+.chart-info p {
+  font-size: 9pt;
+  margin-top: 6px;
+}
+
+.chart-info h2 {
+  margin: 4px 0;
+  font-size: 18px;
+}
+
+.chart-info h3 {
+  margin: 0px 0;
+  font-size: 14px;
+  margin-bottom: 2px;
+}
