Added some text to about proect page

--- a/web/src/components/Layout/Layout.css
+++ b/web/src/components/Layout/Layout.css
@@ -185,6 +185,11 @@ img {
   text-align: left;
 }
 
+.about-project-content p{
+  font-size:16px;
+  text-align: justify;
+}
+
 #git {
   text-align: center;
   position: fixed;
